plugins {
    id 'java'
}

apply plugin: 'application'

mainClassName = 'de.oppa.jlings.Javalings'

group = 'de.oppa.jlings'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'commons-cli:commons-cli:1.8.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.2'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

run {
    standardInput = System.in
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

test {
    useJUnitPlatform()
}

subprojects {
    if (project.name == 'exercises') {
        tasks.withType(JavaCompile) {
            enabled = false
        }
        tasks.withType(Test) {
            enabled = false
        }
        tasks.withType(Jar) {
            enabled = false
        }
    }
}

tasks.withType(JavaCompile) {
    options.warnings = false
}
